@@ -1078,9 +1078,8 @@ static void CL_Plaque(void)
 	idx = MSG_ReadShort ();
 
 	if (idx > 0 && idx <= host_string_count)
-		plaquemessage = &host_strings[host_string_index[idx - 1]];
-	else
-		plaquemessage = "";
+		SCR_SetPlaqueMessage (&host_strings[host_string_index[idx - 1]]);
+	else	SCR_SetPlaqueMessage ("");
 }
 
 static void CL_ParticleExplosion(void)
