@@ -342,7 +342,7 @@ void CL_ClearState (void)
 		cl.free_efrags[i].entnext = &cl.free_efrags[i+1];
 	cl.free_efrags[i].entnext = NULL;
 
-	plaquemessage = "";
+	SCR_SetPlaqueMessage("");
 
 	SB_InvReset();
 }
